--- a/app/views/welcome/homepage.html.erb
+++ b/app/views/welcome/homepage.html.erb
@@ -37,6 +37,7 @@
 	<h5>Travaux effectues</h5>
 	
 	<a href="https://publika.herokuapp.com/"><p id="label">Publica Records</a>
+	<a href="https://mycurriculumvitae.herokuapp.com/"><p id="label">Curiculum Vitae</a>
 	
 	
 	</div>
