--- a/app/views/welcome/homepage.html.erb
+++ b/app/views/welcome/homepage.html.erb
@@ -7,7 +7,7 @@
 <title>CV</title>
 			<div id="header">
 	        <p id="name">Daniel Duspiwa</p>
-			<a href="mailto:you@yourdomain.com"><p id="email">Contactez moi ici</p></a>
+			<a href="mailto:gpt1k7@hotmail@hotmail.com"><p id="email">Contactez moi ici</p></a>
 	</div>		
 	</head>
 	
